--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,5 @@
   "endOfLine": "auto",
   "useTabs": false,
   "printWidth": 120,
-  "jsxSingleQuote": true
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
